--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <div id='main'>
 
     <h2>GitHub Search</h2>
-
+    <!-- Add the toggle button -->
+    <button id='toggle-search'>Toggle Search</button>
+    <!-- Add the search type indicator -->
+    <span id='search-type'>Searching for Users</span>
     <form id='github-form'>
       <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
